fixed that damn align issue

--- a/starting/styles.css
+++ b/starting/styles.css
@@ -443,7 +443,7 @@ h3{
 /* Font examples */
 .font_section{
     border: 1px solid black;
-    
+    height: 500px;
 }
 
 
@@ -451,10 +451,11 @@ h3{
     border: 1px solid black;
     margin: 10px;
     padding: 10px;
-    height: 175px;
-    width: 450px;
+    height: 300px;
+    width: 300px;
     text-align: center;
     display: inline-block;
+    overflow: scroll;
 }
 
 .openSans{
